--- a/htmlFiles/mobile.css
+++ b/htmlFiles/mobile.css
@@ -1,6 +1,3 @@
-/***************************************
-/* Grille de mise en page pour le mobile
-***************************************/
 .grid_6,
 .grid_8,
 .grid_10,
@@ -45,113 +42,6 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		text-shadow: 1px 1px 0 rgba(0,0,0,.3);
 	}
 
-/************
-/* Contact
-************/
-	::-webkit-input-placeholder  { color:#fff; }
-	input:-moz-placeholder { color:#fff; }
-	.placeholder { color: #fff; }
-
-	.contactform {
-		background-color: #33a4c9;
-		color: #fff;
-		display: none;
-	}
-	
-	.contactform > div {
-		padding: 21px 0;
-	}
-	
-	.contactform input[type=text], .contactform input[type=email], .contactform textarea {
-		background: #2983a0;
-		border: 1px solid #226d85;
-		border-radius: 2px;
-		color: #fff;
-		max-width: 100%;
-		opacity: .7;
-		padding: 10px 10px 9px 10px;
-		margin-top: 0;
-		position: relative;
-		vertical-align: top;
-		width: 100%;
-	}
-	
-	.contactform input[type=text], .contactform input[type=email], .contactform textarea {
-		margin-bottom: 21px;
-	}
-	
-	.contactform textarea {
-		font-family: 'DroidSansRegular', Arial, sans-serif;
-		font-size: 14px;
-		height: 148px;
-	}
-	
-	.contactform input[type=text]:focus, .contactform input[type=email]:focus, .contactform textarea:focus {
-		border: 1px solid #226d85;
-		opacity: 1;
-		outline: none;
-		-o-transition: opacity 1s;
-		-ms-transition:opacity 1s;
-		-moz-transition: opacity 1s;
-		-webkit-transition: opacity 1s;
-		transition:opacity 1s;
-	}
-	
-	.contactform input[type=submit] {
-		background: #ff9f39;
-		border: 1px solid #ff9f39;
-		border-radius: 2px;
-		color: #fff;
-		cursor: pointer;
-		font-weight: bold;
-		font-size: 14px;
-		margin: 0;
-		padding: 10px 10px 9px 10px;
-		width: 100%;
-		-webkit-appearance: none;
-	}
-	
-	.contactform input.error, .contactform textarea.error {
-		border: 1px solid red;
-	}
-	
-	.contactform label.error {
-		display: none !important;
-	}
-
-	/***********************
-	/* Message du formulaire
-	***********************/
-		.messageform { 
-			display: none; /* Affiché via jQuery */ 
-			border-radius: 2px; 
-			font-size: 14px;
-			font-weight: bold;
-			line-height: 17px;
-			padding:10px 10px 9px 10px; 
-			margin: 0;
-			text-align: center;
-			width: 100%; 
-		}
-		.envoi-valid, .envoi-error { 
-			display: inline-block; 
-		 }
-		.envoi-valid { 
-			background-color: #31D869;
-			border:1px solid #108D3A; 
-			color: #108D3A;
-		}
-		.envoi-error { 
-			background-color: #FF5839;
-			border:1px solid #A62913; 
-			color: #A62913;
-		}
-		.envoi-error a {
-			color: #A62913;
-			text-decoration: underline;
-		}
-		
-
 /***************
 /* Corps - Main
 ***************/
@@ -160,7 +50,7 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		overflow: hidden;
 	}
 	
-	.apropos, .competences, .experiences, .formations, .loisirs, .contact {
+	.aboutme, .skills, .experience, .education, .hobbies, .contact {
 		margin-top: 63px;
 	}
 	
@@ -186,34 +76,6 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		border-radius: 25px;
 	}
 	
-		/***************
-		/* Pictos titres
-		***************/
-		
-		section[role=main] h3:after {
-			background:url('../img/pictos-titre.png') no-repeat 11px 10px;
-		}
-		
-		section[role=main] .competences h3:after {
-			background-position: 11px -34px;
-		}
-	
-		section[role=main] .experiences h3:after {
-			background-position: 11px -86px;
-		}
-		
-		section[role=main] .formations h3:after {
-			background-position: 10px -139px;
-		}
-		
-		section[role=main] .loisirs h3:after {
-			background-position: 10px -250px;
-		}
-		
-		section[role=main] .contact h3:after {
-			background-position: 11px -194px;
-		}
-	
 	section[role=main] h4 {
 		margin-bottom: 0px;
 	}
@@ -223,18 +85,15 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		font-weight: normal;
 	}
 	
-	.experiences li, .formations li {
+	.experience li, .education li {
 		margin-bottom: 63px;
 	}
 	
-	.experiences li:last-child, .formations li:last-child {
+	.experience li:last-child, .education li:last-child {
 		margin-bottom: 21px;
 	}
 	
-	/**********************************************
-	/* Affichage des compétences sous forme de tags
-	**********************************************/
-	.competences .tags li {
+	.skills .tags li {
 		background-color:#33a4c9;
 		border:1px solid #1b91b7;
 		border-radius: 15px;
@@ -245,15 +104,12 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		padding: 5px 10px;
 	}
 	
-	/************************************************
-	/* Affichage des compétences sous forme de barres
-	*************************************************/
-	.competences .barres li {
+	.skills .bars li {
 		margin-bottom: 21px;
 		position: relative;
 	}
 	
-	.competences .barres li:after {
+	.skills .bars li:after {
 		background: #e1e1e1;
 		bottom: -4px;
 		content: ' ';
@@ -263,7 +119,7 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		width:100%;
 	}
 	
-	.competences .barres li span {
+	.skills .bars li span {
 		background: #33a4c9;
 		bottom: -4px;
 		content: ' ';
@@ -275,17 +131,12 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		z-index: 1;
 	}
 	
-	
-	/***********
-	/* Pictos
-	***********/
-	.lieu, .dates, .phone, .mail, .site, .form, .twitter, .facebook, .dribbble, .skype {
-		background: url('../img/pictos-gris.png') no-repeat;
+	.place, .dates, .phone, .mail, .github {
 		padding-left: 25px;
 		margin: 0 10px 1px 0;
 	}
 	
-	.lieu {
+	.place {
 		background-position: 0 -2px;
 		color: #999;
 	}
@@ -303,26 +154,6 @@ Créateur : Christophe HERMANN (@chrishrmnn)
 		background-position: 0 -58px;
 	}
 	
-	.site {
+	.github {
 		background-position: 0 -80px;
-	}
-	
-	.form {
-		background-position: 0 -100px;
-	}
-	
-	.twitter {
-		background-position: 0 -122px;
-	}
-	
-	.facebook {
-		background-position: 0 -140px;
-	}
-	
-	.dribbble {
-		background-position: 0 -160px;
-	}
-	
-	.skype {
-		background-position: 0 -180px;
 	}
