--- a/htmlFiles/cv.css
+++ b/htmlFiles/cv.css
@@ -133,7 +133,9 @@
 		border-radius: 25px;
 	}
 	
-	
+	.aboutme {
+		margin-bottom: 63px;
+	}
 	
 	.experience ul, .education ul {
 		margin-left: 60px;
@@ -158,6 +160,44 @@
 	
 	.experience li p, .education li p {
 		margin-left: 30px;
+	}
+	
+	.languages .tags li {
+		background-color:#33a4c9;
+		border:1px solid #1b91b7;
+		border-radius: 15px;
+		color:#fff;
+		display: inline-block;
+		line-height: 13px;
+		margin: 0 7px 17px 0;
+		padding: 5px 10px;
+	}
+	
+	.languages .bars li {
+		margin-bottom: 21px;
+		position: relative;
+	}
+	
+	.languages .bars li:after {
+		background: #e1e1e1;
+		bottom: -4px;
+		content: ' ';
+		display: block;
+		height: 5px;
+		position: absolute;
+		width:100%;
+	}
+	
+	.languages .bars li span {
+		background: #33a4c9;
+		bottom: -4px;
+		content: ' ';
+		display: block;
+		height: 5px;
+		left: 0;
+		position: absolute;
+		width: inherit;
+		z-index: 1;
 	}
 	
 	.skills .tags li {
