--- a/htmlFiles/cv.css
+++ b/htmlFiles/cv.css
@@ -137,7 +137,7 @@
 		margin-bottom: 63px;
 	}
 	
-	.experience ul, .education ul {
+	.experience ul, .education ul, .projects ul {
 		margin-left: 60px;
 	}
 	
@@ -150,15 +150,15 @@
 		font-weight: normal;
 	}
 	
-	.experience li, .education li {
+	.experience li, .education li, .projects li {
 		margin-bottom: 63px;
 	}
 	
-	.experience li:last-child, .education li:last-child {
+	.experience li:last-child, .education li:last-child, .projects li:last-child {
 		margin-bottom: 21px;
 	}
 	
-	.experience li p, .education li p {
+	.experience li p, .education li p, .projects li p {
 		margin-left: 30px;
 	}
 	
@@ -239,12 +239,12 @@
 	}
 	
 	
-	.place, .dates, .phone, .mail, .github {
+	.place, .dates, .phone, .mail, .github, .description {
 		padding-left: 25px;
 		margin: 0 10px 1px 10px;
 	}
 	
-	.place {
+	.place, .descriptions {
 		background-position: 0 -2px;
 		color: #999;
 	}
