--- a/htmlFiles/mobile.css
+++ b/htmlFiles/mobile.css
@@ -50,7 +50,7 @@ Creator : Christophe HERMANN (@chrishrmnn)
 		overflow: hidden;
 	}
 	
-	.aboutme, .languages, .skills, .experience, .education, .hobbies, .contact {
+	.aboutme, .languages, .skills, .experience, .projects, .education, .hobbies, .contact {
 		margin-top: 63px;
 	}
 	
@@ -89,11 +89,11 @@ Creator : Christophe HERMANN (@chrishrmnn)
 		margin-bottom: 63px;
 	}
 
-	.experience li, .education li {
+	.experience li, .education li, .projects li {
 		margin-bottom: 63px;
 	}
 	
-	.experience li:last-child, .education li:last-child {
+	.experience li:last-child, .education li:last-child, .projects li:last-child {
 		margin-bottom: 21px;
 	}
 	
@@ -173,12 +173,12 @@ Creator : Christophe HERMANN (@chrishrmnn)
 		z-index: 1;
 	}
 	
-	.place, .dates, .phone, .mail, .github {
+	.place, .dates, .phone, .mail, .github, .description {
 		padding-left: 25px;
 		margin: 0 10px 1px 0;
 	}
 	
-	.place {
+	.place, .description {
 		background-position: 0 -2px;
 		color: #999;
 	}
