--- a/htmlFiles/cv.css
+++ b/htmlFiles/cv.css
@@ -244,12 +244,12 @@
 		margin: 0 10px 1px 10px;
 	}
 	
-	.place, .descriptions {
+	.place {
 		background-position: 0 -2px;
 		color: #999;
 	}
 	
-	.dates {
+	.dates, .descriptions {
 		background-position: 0 -22px;
 		color: #999;
 	}
