Project description color change.

--- a/htmlFiles/cv.css
+++ b/htmlFiles/cv.css
@@ -249,7 +249,11 @@
 		color: #999;
 	}
 	
-	.dates, .descriptions {
+	.description {
+		color: #777;
+	}
+
+	.dates {
 		background-position: 0 -22px;
 		color: #999;
 	}
