--- a/htmlFiles/cv.css
+++ b/htmlFiles/cv.css
@@ -94,7 +94,7 @@
 	}
 	
 	header hgroup h2 {
-		color:#cecece;
+		color:#000000;
 		font-style: italic;
 		text-shadow: 1px 1px 0 rgba(0,0,0,.3);
 	}	
