--- a/htmlFiles/css/mobile.css
+++ b/htmlFiles/css/mobile.css
@@ -85,6 +85,43 @@ Creator : Christophe HERMANN (@chrishrmnn)
 		font-weight: normal;
 	}
 	
+	.collapsible {
+		background-color: #ddd;
+		color: #444;
+		cursor: pointer;
+		padding: 18px;
+		margin-top: 2px;
+		width: 100%;
+		border: none;
+		text-align: center;
+		outline: none;
+		font-size: 15px;
+	}
+
+	.collapsible:after {
+		content: '\002B';
+		color: white;
+		font-weight: bold;
+		float: right;
+		margin-left: 5px;
+	}
+
+	.active:after {
+		content: '\2212';
+	}
+
+	.active, .collapsible:hover {
+		background-color: #ccc;
+	}
+
+	.content {
+		padding: 0 18px;
+		max-height: 0;
+		overflow: hidden;
+		transition: max-height 0.2s ease-out;
+		background-color: #e6dede;
+	}
+
 	.aboutme {
 		margin-bottom: 63px;
 	}
