Fixed minor discrepancy between pc and mobile css.

--- a/htmlFiles/css/mobile.css
+++ b/htmlFiles/css/mobile.css
@@ -36,7 +36,7 @@ Creator : Christophe HERMANN (@chrishrmnn)
 	}
 	
 	header hgroup h2 {
-		color:#cecece;
+		color:#000000;
 		font-style: italic;
 		line-height: 30px;
 		text-shadow: 1px 1px 0 rgba(0,0,0,.3);
