--- a/htmlFiles/css/mobile.css
+++ b/htmlFiles/css/mobile.css
@@ -1,8 +1,4 @@
-.grid_6,
-.grid_8,
-.grid_10,
-.grid_16,
-.container_16 {
+.grid_6, .grid_8, .grid_10, .grid_16, .container_16 {
 	margin: 0 10px;
 }
 
